src/snapshots/treetop__treetop_app__test__filtering_highlights_multiple_matches_in_command.snap
---
source: src/treetop_app.rs
expression: render_ui(&mut app)
---
     p͟i͟d͟   cpu       ram ┃ executable                                           
━━━━━━━━━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
       1    0%       0MB ┃ ▶ e͟ve͟ e͟ve͟ abcde͟fg                                    
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
C͟t͟r͟l͟+͟C͟:͟ ͟Q͟u͟i͟t͟ ͟|͟ ͟↑͟↓͟ ͟:͟ ͟s͟c͟r͟o͟l͟l͟ ͟|͟ ͟E͟N͟T͟E͟R͟:͟ ͟s͟e͟l͟e͟c͟t͟ ͟p͟r͟o͟c͟e͟s͟s͟ ͟|͟ ͟/͟:͟ ͟f͟i͟l͟t͟e͟r͟ ͟p͟r͟o͟c͟e͟s͟s͟e͟s͟ ͟|͟ ͟s͟e͟a͟r͟c͟
